Fixed icon spacing

--- a/assets/sass/layout/_main-nav.scss
+++ b/assets/sass/layout/_main-nav.scss
@@ -120,7 +120,7 @@
 
             [class^="icon-"],
             [class*=" icon-"] {
-                margin-right: 1em;
+                margin-right: .5em;
             }
 
             &:hover,
